--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,14 @@
 //Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Source+Sans+Pro:wght@200;300;400&display=swap');
 
+
+//Config
+@import './variaveis.scss';
+@import './config.scss';
+
+//Components
+@import './header.scss';
+
+
 //Framework
 @import './bootstrap.scss';
