adding new css style

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,9 +6,12 @@
 @import './variaveis.scss';
 @import './config.scss';
 
+
 //Components
 @import './header.scss';
-
+@import './nav-produtos.scss';
+@import './banner-promocionais.scss';
+@import './produtos.scss';
 
 //Framework
 @import './bootstrap.scss';
