--- a/assets/scss/variaveis.scss
+++ b/assets/scss/variaveis.scss
@@ -1,4 +1,8 @@
 $white: #fff;
 $pink: #FF0F9A;
-$primary-color: #FFC107;
-$secundary-color: #343A40;
+$yellow: #FFC107;
+$gray: #343A40;
+$purple: #B343C3;
+
+$primary-color: $yellow;
+$secundary-color: $gray;
