final site ajusts

--- a/assets/scss/produtos-compras.scss
+++ b/assets/scss/produtos-compras.scss
@@ -13,4 +13,33 @@
       font-size: 16px;
     }
   }
+
+
+
+  .produtos-precos {
+    .produtos-stars {
+      svg {
+        fill: $yellow;
+      }
+    }
+
+    strong {
+      font-size: 40px;
+    }
+
+    form {
+      label {
+        margin: 0;
+      }
+
+      font-weight: 100;
+    }
+
+    .produtos-stars,
+    svg,
+    strong span,
+    form {
+      font-size: 16px;
+    }
+  }
 }
